objects/LBI__RuleClause__c.object
<CustomObject>
    <fields>
        <fullName>LBI__AppliesToAllRecords__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Applies To All Records?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__AppliesToPreviousRecords__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Applies To Previous Records?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__Field__c</fullName>
        <label>Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__ObjectMatcher__c</fullName>
        <description>Field that matches the recommendation being evaluated with a set retrieved from the DB. If empty, the matcher is Play/Account</description>
        <label>Object Matcher</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__ObjectModifier__c</fullName>
        <label>Object Modifier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Regular</fullName>
                    <default>true</default>
                    <label>Regular</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LBI__Object__c</fullName>
        <label>Object</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__OnlyCheckExistence__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, the Field/Operator/Value is ignored in favor of the existence of any record matching the Object/Matcher</description>
        <label>Only Check Existence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__Operator__c</fullName>
        <label>Operator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__Rule__c</fullName>
        <label>Rule</label>
        <referenceTo>LBI__Rule__c</referenceTo>
        <relationshipLabel>Rule Clauses</relationshipLabel>
        <relationshipName>Rule_Clauses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LBI__ValueInfo__c</fullName>
        <label>Value Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LBI__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Rule Clause</label>
    <nameField>
        <displayFormat>RC-{00000000}</displayFormat>
        <label>Rule Clause Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rule Clauses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>